fix z-index issues

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: black;
-  z-index: 20;
+  z-index: 122;
   color: var(--main-white-color);
 }
 
@@ -113,7 +113,7 @@ body {
   left: 0;
   pointer-events: none;
 
-  z-index: 100 !important ; 
+  z-index: 125 !important ; 
 }
 
 
