--- a/src/components/Subcomponent.css
+++ b/src/components/Subcomponent.css
@@ -139,7 +139,7 @@
 
   padding: 3rem;
 
-  z-index: 105;
+  z-index: 130;
 }
 
 .card:hover {
